# ncfacbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.toml  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
ncfacbot/: __init__.py  _all.py  closest.py  raid.py  safe.md  safe.py  shop.py  sm.py  tick.py
ncfacbot/web/: nc-safe-report.user.js
