[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ncfacbot"
requires-python = ">=3.11"
version = "1.0.0"

[project.optional-dependencies]
dev = ["aethersprite@git+https://github.com/haliphax/aethersprite.git"]

[tool.setuptools]
packages = ["ncfacbot"]

[tool.black]
line-length = 80

[tool.ruff]
ignore = [
	# ambiguous variable name
	"E741",
]
line-length = 80
target-version = "py311"
